--- a/backend/real-estate/src/main/resources/application.properties
+++ b/backend/real-estate/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=real-estate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5445/realEstateSiteDB
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
