--- a/backend/real-estate/src/main/resources/application.properties
+++ b/backend/real-estate/src/main/resources/application.properties
@@ -7,4 +7,16 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 spring.datasource.hikari.auto-commit=false
 
+# File Upload Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
+file.upload-dir=uploads
 
+# Email Configuration (Gmail)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=aksoyburak808@gmail.com
+spring.mail.password=ycau qpag evni dpxz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
