--- a/backend/real-estate/pom.xml
+++ b/backend/real-estate/pom.xml
@@ -111,6 +111,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>10.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>test</scope>
