--- a/backend/real-estate/src/main/resources/application.properties
+++ b/backend/real-estate/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=real-estate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5445/realEstateSiteDB
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -16,7 +17,12 @@ file.upload-dir=uploads
 # Email Configuration (Gmail)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=aksoyburak808@gmail.com
-spring.mail.password=ycau qpag evni dpxz
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Twilio Configuration
+twilio.account-sid=${TWILIO_ACCOUNT_SID}
+twilio.auth-token=${TWILIO_AUTH_TOKEN}
+twilio.phone-number=${TWILIO_PHONE_NUMBER}
