--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
@@ -51,6 +53,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
+    "@types/leaflet": "^1.9.21",
     "typescript": "^4.9.5"
   }
 }
