--- a/backend/real-estate/src/main/resources/application.properties
+++ b/backend/real-estate/src/main/resources/application.properties
@@ -26,3 +26,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 twilio.account-sid=${TWILIO_ACCOUNT_SID}
 twilio.auth-token=${TWILIO_AUTH_TOKEN}
 twilio.phone-number=${TWILIO_PHONE_NUMBER}
+
+# OAuth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+# OAuth2 Frontend Redirect
+app.oauth2.redirect-uri=http://localhost:3000/oauth2/redirect
