--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,6 +4,9 @@ REACT_APP_API_BASE_URL=http://localhost:8080/api
 # Environment
 REACT_APP_ENV=development
 
+# Google OAuth
+REACT_APP_GOOGLE_CLIENT_ID=your-google-client-id-here
+
 # Optional: Analytics, etc.
 # REACT_APP_GOOGLE_ANALYTICS_ID=
 # REACT_APP_SENTRY_DSN=
