--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@react-oauth/google": "^0.13.4",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
