admin panel added

--- a/backend/real-estate/src/main/resources/application.properties
+++ b/backend/real-estate/src/main/resources/application.properties
@@ -35,3 +35,7 @@ spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/o
 
 # OAuth2 Frontend Redirect
 app.oauth2.redirect-uri=http://localhost:3000/oauth2/redirect
+
+# Admin Configuration
+app.admin.username=${ADMIN_USERNAME:admin}
+app.admin.password=${ADMIN_PASSWORD:Admin123!}
