--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.15.4",
     "tailwindcss": "^3.3.6",
     "web-vitals": "^3.5.0",
     "yup": "^1.4.0"
