--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@react-oauth/google": "^0.13.4",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stomp/stompjs": "^7.2.1",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "recharts": "^2.15.4",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^3.3.6",
     "web-vitals": "^3.5.0",
     "yup": "^1.4.0"
@@ -56,6 +58,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/leaflet": "^1.9.21",
+    "@types/sockjs-client": "^1.5.4",
     "typescript": "^4.9.5"
   }
 }
