--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -59,6 +59,7 @@
     "@types/jest": "^29.5.8",
     "@types/leaflet": "^1.9.21",
     "@types/sockjs-client": "^1.5.4",
+    "eslint-config-react-app": "^7.0.1",
     "typescript": "^4.9.5"
   }
 }
